...
                        scrollNotification.metrics.maxScrollExtent) {
                      onScrolledToEndCallback();
                    }
                    return false;
                  },
                  child: GridView(
                    key: const Key('characterListView'),
                    shrinkWrap: true,
                    padding: const EdgeInsets.all(8),
                    physics: const BouncingScrollPhysics(),
                    gridDelegate:
                        const SliverGridDelegateWithFixedCrossAxisCount(
                      crossAxisCount: 2,
...
